--- a/src/layout/base/index.module.scss
+++ b/src/layout/base/index.module.scss
@@ -6,3 +6,13 @@
     
   }
 }
+.sider {
+  height: var(--layout-header-height);
+  padding: 12px;
+  &_logo {
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, .6);
+    border-radius: 6px;
+  }
+}
