--- a/src/index.scss
+++ b/src/index.scss
@@ -23,7 +23,26 @@ ul {
   box-sizing: border-box;
   font-family: 'PingFangSC-Regular', 'PingFang SC';
 }
-
+* ::-webkit-scrollbar {
+  width: 5px; /* 设置滚动条的宽度 */
+}
+ 
+/* 自定义滚动条轨道 */
+* ::-webkit-scrollbar-track {
+  background: #f1f1f1; /* 设置轨道的背景颜色 */
+  border-radius: 5px;
+}
+ 
+/* 自定义滚动条的滑块（thumb） */
+* ::-webkit-scrollbar-thumb {
+  background: #888; /* 设置滑块的背景颜色 */
+  border-radius: 5px;
+}
+ 
+/* 当滑块悬停或活动时自定义滚动条的滑块 */
+* ::-webkit-scrollbar-thumb:hover {
+  background: #555; /* 设置滑块在悬停状态下的背景颜色 */
+}
 
 :root {
   --layout-header-height: 56px;
