--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,5 @@
 @use './src/styles/nprogress.scss';
+@use './src/styles/antd.scss';
 
 html, body {
   margin: 0;
@@ -52,7 +53,8 @@ ul {
   --layout-footer-height: 48px;
   --layout-tabs-subMenu-boxShadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05);
   --nprogress-color: #1668dc;
-  --layout-content-padding: 12px;
+  --layout-content-out-padding: 12px;
+  --layout-content-inner-padding: 12px;
 }
 
 .fixTopLayout {
@@ -60,11 +62,31 @@ ul {
   overflow: hidden;
   position: relative;
   &_child {
-    overflow-y: auto;
+    // overflow-y: auto;
     height: 100%;
   }
 }
 .fixTopHeader {
-  padding-bottom: 12px;
+  // min-height: 50px;
+  padding: 0 12px 12px;
   border-bottom: 1px solid #ccc;
+}
+
+.modalStyle {
+  &_label {
+    margin-bottom: 10px;
+  }
+  p {
+    color: #666;
+  }
+}
+
+
+.drawerLayout {
+  height: 100%;
+  background-color: #f5f6f9;
+  &_header {
+    height: 140px;
+    background-color: #fff;
+  }
 }
