--- a/src/layout/base/index.module.scss
+++ b/src/layout/base/index.module.scss
@@ -5,8 +5,8 @@
 }
 .context {
   min-height: 100%;
-  padding: var(--layout-content-padding);
-  background-color: #fff;
+  padding: var(--layout-content-inner-padding);
+  // background-color: #fff;
 }
 .sider {
   height: var(--layout-header-height);
