--- a/src/styles/antd.scss
+++ b/src/styles/antd.scss
@@ -19,6 +19,9 @@
 .ant-drawer-body {
   padding: 0 !important;
 }
+.ant-tabs-nav {
+  margin: 0 !important;
+}
 .ant-layout-content {
   &::-webkit-scrollbar {
     display: none;
