--- a/src/components/index.module.scss
+++ b/src/components/index.module.scss
@@ -104,3 +104,26 @@
   align-items: center;
   transform: scale(1.5);
 }
+
+
+.EditMode {
+  width: 100vw;
+  height: 100vh;
+  position: relative;
+  z-index: 1001;
+  background-color: rgb(245, 246, 249);
+  padding: 40px 0px;
+  &_mask {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  &_page {
+    width: 900px;
+    margin: 0 auto;
+    height: 90vh;
+    box-shadow:rgb(0, 0, 0, 0.4) 0px 0px 10px 0px;
+  }
+}
