--- a/src/components/index.module.scss
+++ b/src/components/index.module.scss
@@ -125,5 +125,42 @@
     margin: 0 auto;
     height: 90vh;
     box-shadow:rgb(0, 0, 0, 0.4) 0px 0px 10px 0px;
+    position: relative;
+    &_header {
+      width: calc(100% - 48px);
+      height: 40px;
+      margin-bottom: 20px;
+      position: absolute;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      h1 {
+        font-size: 17px;
+        color: var(--font-color-default);
+      }
+      &_close {
+        cursor: pointer;
+        font-size: 20px;
+      }
+    }
+    &_body {
+      margin-top: 60px;
+      margin-bottom: 60px;
+      max-height: calc(90vh - 150px);
+      overflow-y: auto;
+      width: 100%;
+    }
+    &_footer {
+      padding: 5px 0 0;
+      display: grid;
+      grid-template-columns: repeat(2, 8%);
+      grid-gap: 12px;
+      justify-content: end;
+      width: calc(100% - 48px);
+      height: 36px;
+      position: absolute;
+      bottom: 24px;
+      right: 24px;
+    }
   }
 }
