--- a/src/index.scss
+++ b/src/index.scss
@@ -11,8 +11,6 @@ html::-webkit-scrollbar {
 p {
   margin: 0;
   padding: 0;
-  color: #999;
-  font-size: 12px;
 }
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -53,11 +51,18 @@ ul {
 :root {
   --layout-header-height: 56px;
   --layout-tab-height: 44px;
-  --layout-footer-height: 48px;
+  --layout-footer-height: 30px;
+  --layout-footer-padding: 0px 50px;
   --layout-tabs-subMenu-boxShadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05);
   --nprogress-color: #1668dc;
   --layout-content-out-padding: 12px;
   --layout-content-inner-padding: 12px;
+  --font-color-default: #000; /* 默认字体颜色 */
+  --font-color-inverted: #ffffff; /* 深色主题字体颜色 */
+}
+[data-theme='dark'] {
+  --font-color-default: #ffffff;
+  --font-color-inverted: #ccc;
 }
 
 .fixTopLayout {
@@ -73,6 +78,18 @@ ul {
   // min-height: 50px;
   padding: 0 12px 12px;
   border-bottom: 1px solid #ccc;
+  &_main {
+    min-height: 32px;
+    display: flex;
+    align-items: center;
+    p {
+      font-size: 12px;
+      strong {
+        font-size: 13px;
+        color: #2362fb
+      }
+    }
+  }
 }
 
 .modalStyle {
@@ -96,6 +113,7 @@ ul {
     margin-bottom: 15px;
     border-bottom: 1px solid #e6e6e6;
     padding: 30px 20px 15px;
+    box-shadow:rgb(0, 0, 0, 0.2) 0px 0px 10px 0px;
     &_main {
       width: 100%;
       &_top {
@@ -105,6 +123,7 @@ ul {
         &_left {
           display: flex;
           &_avatar {
+            flex: 0 0 40px;
             width: 40px;
             height: 40px;
             border: 1px solid #ccc;
@@ -112,11 +131,27 @@ ul {
             margin-right: 15px;
           }
           &_info {
+            flex: 0 0 170px;
             p {
+              font-size: 12px;
+              color: #999;
               margin-bottom: 5px;
             }
             h6 {
+              max-width: 170px;
+              overflow: hidden;
+              text-overflow: ellipsis;
+              white-space: nowrap;
               font-size: 16px;
+            }
+          }
+          &_operate {
+            flex: 0 0 200px;
+            display: flex;
+            margin-left: 5px;
+            padding-top: 18px;
+            &_btn {
+              margin-left: 10px;
             }
           }
         }
@@ -132,10 +167,15 @@ ul {
         padding-top: 8px;
         &_item {
           flex: 0 0 10%;
+          p {
+            font-size: 12px;
+            color: #999;
+          }
           h5 {
             margin-top: 8px;
             font-size: 13px;
-            color: #000;
+            color: var(--font-color-default);
+            font-weight: 400;
           }
         }
       }
@@ -148,6 +188,7 @@ ul {
     margin-bottom: 15px;
     height: calc(100vh - 170px);
     &_left, &_right {
+      box-shadow:rgb(0, 0, 0, 0.2) 0px 0px 10px 0px;
       // background-color: #fff;
       // overflow-y: auto;
       border: 1px solid #e6e6e6;
