--- a/src/pages/table/components/index.module.scss
+++ b/src/pages/table/components/index.module.scss
@@ -14,17 +14,42 @@
       border-radius: 5px;
     }
     &_item:hover {
-      background-color: #2362fb;
-      color: #fff;
+      background-color: #2362fb !important;
+      color: #fff !important;
     }
   }
 }
 
 .EditComp {
   width: 100%;
-  height: 200px;
   border: 1px solid #ccc;
-  margin-top: 15px;;
+  margin-top: 15px;
+  padding: 8px 10px;
+  position: relative;
+  &_empty {
+    cursor: pointer;
+    display: flex;
+    color: #ccc;
+    font-size: 15px;
+    p {
+      margin-left: 5px;
+      font-size: 12px;
+    }
+  }
+  &_empty:hover {
+    color: #2362fb;
+    p { 
+      color: #ccc;
+      font-size: 12px;
+    }
+  }
+  &_close {
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #ccc;
+  }
 }
 
 .DetailInfoBlock {
@@ -34,7 +59,7 @@
     padding: 5px 15px;
     h4 {
       font-size: 14px;
-      color: #333;
+      color: var(--font-color-default);
       margin-left: 10px;
     }
   }
@@ -101,11 +126,29 @@
     padding: 20px 10px;
     &_item {
       margin: 20px 0;
+      p {
+        font-size: 12px;
+        color: #999;
+      }
       h5 {
         font-size: 12px;
-        color: #333;
+        color: var(--font-color-default);
         font-weight: 400;
       }
     }
+  }
+}
+
+.WriteFollowUp {
+  width: 100%;
+  &_top {
+    display: flex;
+  }
+  &_input {
+    margin: 8px 0;
+  }
+  &_btn {
+    display: flex;
+    justify-content: flex-end;
   }
 }
