--- a/src/index.scss
+++ b/src/index.scss
@@ -51,7 +51,7 @@ ul {
 :root {
   --layout-header-height: 56px;
   --layout-tab-height: 44px;
-  --layout-footer-height: 30px;
+  --layout-footer-height: 0px;
   --layout-footer-padding: 0px 50px;
   --layout-tabs-subMenu-boxShadow: 0 3px 6px -4px rgba(0, 0, 0, .12), 0 6px 16px 0 rgba(0, 0, 0, .08), 0 9px 28px 8px rgba(0, 0, 0, .05);
   --nprogress-color: #1668dc;
@@ -66,7 +66,7 @@ ul {
 }
 
 .fixTopLayout {
-  height: calc(100vh - var(--layout-header-height) - var(--layout-tab-height) - var(--layout-footer-height) - var(--layout-content-padding) * 4);
+  height: calc(100vh - var(--layout-header-height) - var(--layout-tab-height) - var(--layout-footer-height) - var(--layout-content-out-padding) * 2 - var(--layout-content-inner-padding) * 2);
   overflow: hidden;
   position: relative;
   &_child {
@@ -77,7 +77,7 @@ ul {
 .fixTopHeader {
   // min-height: 50px;
   padding: 0 12px 12px;
-  border-bottom: 1px solid #ccc;
+  // border-bottom: 1px solid #ccc;
   &_main {
     min-height: 32px;
     display: flex;
