--- a/src/layout/base/index.module.scss
+++ b/src/layout/base/index.module.scss
@@ -8,6 +8,10 @@
   min-height: 100%;
   max-height: 100%;
   padding: var(--layout-content-inner-padding);
+  overflow-y: scroll;
+}
+.context::-webkit-scrollbar {
+  display: none;
 }
 .sider {
   height: var(--layout-header-height);
@@ -15,7 +19,7 @@
   &_logo {
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, .6);
+    background: rgba(255, 255, 255, .6);
     border-radius: 6px;
   }
 }
