--- a/src/styles/antd.scss
+++ b/src/styles/antd.scss
@@ -1,4 +1,3 @@
-
 .ant-table-body {
   min-height: var(--table-body-height) !important;
   scrollbar-width: auto;
@@ -27,4 +26,7 @@
   &::-webkit-scrollbar {
     display: none;
   }
+}
+.ant-pagination  {
+  margin: 16px 0 0 !important;
 }
