--- a/src/pages/extendedPage/index.module.scss
+++ b/src/pages/extendedPage/index.module.scss
@@ -24,6 +24,9 @@
         justify-content: center;
         cursor: pointer;
         img {
+          width: 60px;
+          height: 60px;
+          object-fit: contain;
           margin-bottom: 5px;
         }
         p {
@@ -35,24 +38,30 @@
 }
 .modelItem {
   position: absolute;
-  top: 30%;
-  left: 30%;
+  // top: 30%;
+  // left: 30%;
   display: inline-flex;
   flex-direction: column;
   z-index: 2;
   width: 60vmax;
-  height: 20vmax;
+  height: 30vmax;
   border-radius: 5px;
   background-color: #fff;
 }
 .modelHeader {
   width: 100%;
-  height: 30px;
+  height: 44px;
   border-bottom: 1px solid #ccc;
   cursor: move;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  p {
+    font-size: 20px;
+    padding-left: 12px;
+    color: #000;
+    font-weight: 600;
+  }
   &_control {
     display: flex;
     align-items: center;
@@ -81,5 +90,6 @@
   &_iframe {
     width: 100%;
     height: 100%;
+    border: 0;
   }
 }
