--- a/src/pages/extendedPage/index.module.scss
+++ b/src/pages/extendedPage/index.module.scss
@@ -1,7 +1,9 @@
 .ExtendedPage {
   width: calc(100% + 24px);
-  margin: -12px;
   height: calc(100vh - var(--layout-header-height) - var(--layout-tab-height) - var(--layout-footer-height) - var(--layout-content-out-padding) * 2 );
+  margin: -12px;
+  // width: 100%;
+  // height: 100vh;
   background-color: #4d707b;
   padding: 12px;
   position: relative;
