--- a/src/index.scss
+++ b/src/index.scss
@@ -59,6 +59,12 @@ ul {
   --layout-content-inner-padding: 12px;
   --font-color-default: #000; /* 默认字体颜色 */
   --font-color-inverted: #ffffff; /* 深色主题字体颜色 */
+  .table-even-row {
+    background-color: #ffffff !important;
+  }
+  .table-odd-row {
+    background-color: #c0c0c0 !important;
+  }
 }
 [data-theme='dark'] {
   --font-color-default: #ffffff;
