--- a/src/styles/antd.scss
+++ b/src/styles/antd.scss
@@ -9,13 +9,14 @@
   }
   
   &::-webkit-scrollbar-track {
-    background-color: #F1F1F1 !important;
+    background-color: var(--scrollbar-track-color) !important;
   }
   &::-webkit-scrollbar-thumb {
     border-radius: 6px !important;
-    background-color: #C0C0C0 !important;
+    background-color: var(--scrollbar-thumb-color) !important;
   }
 }
+
 .ant-tabs-tab:hover {
   background-color: rgba($color: #000000, $alpha: 0.2) !important;
 }
