--- a/src/pages/extendedPage/index.module.scss
+++ b/src/pages/extendedPage/index.module.scss
@@ -4,7 +4,7 @@
   margin: -12px;
   // width: 100%;
   // height: 100vh;
-  background-color: #4d707b;
+  background-color: var(--extended-page-background);
   padding: 12px;
   position: relative;
   &_desktop {
