--- a/src/components/editComp/index.module.scss
+++ b/src/components/editComp/index.module.scss
@@ -13,7 +13,7 @@
       width: 4px;
       height: 14px;
       border-radius: 2px;
-      background-color: #1668dc;
+      background-color: var(--btn-hover-color);
       position: absolute;
       top: 50%;
       left: -10px;
