--- a/src/layout/base/index.module.scss
+++ b/src/layout/base/index.module.scss
@@ -21,7 +21,7 @@
   &_logo {
     width: 100%;
     height: 100%;
-    background: rgba(255, 255, 255, .6);
+    background: rgba(129, 129, 129);
     border-radius: 6px;
   }
 }
