--- a/src/layout/base/components/HeaderComp/index.module.scss
+++ b/src/layout/base/components/HeaderComp/index.module.scss
@@ -60,15 +60,21 @@
       &_info {
         display: flex;
         align-items: center;
-        p {
-          margin-left: 10px;
-          font-size: 14px;
-          font-weight: 600;
-        }
         img {
           width: 50px;
           height: 40px;
           object-fit: contain;
+        }
+        &_name {
+          p {
+            margin-left: 10px;
+            font-size: 14px;
+            font-weight: 600;
+          }
+          h6 {
+            margin-left: 10px;
+            font-weight: 400;
+          }
         }
       }
     }
