--- a/src/layout/base/index.module.scss
+++ b/src/layout/base/index.module.scss
@@ -9,7 +9,7 @@
   max-height: 100%;
   padding: var(--layout-content-inner-padding);
   overflow-y: scroll;
-  box-shadow: 0px 10px 12px 0px rgba(0, 0, 0, 0.5);
+  // box-shadow: 0px 10px 12px 0px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
 }
 .context::-webkit-scrollbar {
